@@ -281,6 +281,8 @@ Bug Fixes
 * SOLR-7298: Fix Collections API calls (SolrJ) to not add name parameter when not needed.
   (Shai Erera, Anshum Gupta)
 
+* SOLR-7134: Replication can still cause index corruption. (Mark Miller, shalin, Mike Drob)
+
 Optimizations
 ----------------------
 
